# alfred

./: dam_load.zsh  pyproject.toml
alfred_cli/: main.py
alfred_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
alfred_cli/dam/: __init__.py  add.py  data.json  env.py  get.py  list.py  remove.py
alfred_cli/kvm/: __init__.py  add.py  data.json  get.py  list.py  remove.py
